# PerspectiveWidget

./: .gitignore  CMakeLists.txt  PerspectiveWidget.py  README.md  Shape.py  application.py  cube.py  cubeVisualizer.py  main.py  pyproject.toml  requirements.txt
src/: canvas3DRenderer.py  perspectiveWidget.py  vector3.py
src/cshape3d/: __init__.py  bindings.cpp
src/cshape3d/object/: CustomObject3D.h  OBJParser.h
src/cshape3d/renderer/: Renderer.h
src/cshape3d/shape/: Cilinder.h  Cube.h  Object3D.h  Piramid.h  Sphere.h
src/cshape3d/test/: test.cpp
src/cshape3d/vector/: Vector3.h
src/lib/: Cilinder.h  Cube.h  Piramid.h  Shape3D.h  Sphere.h  Vector3.h  bindings.cpp
src/lib/cshape3d/: Cilinder.h  Cube.h  Edge.h  Piramid.h  Renderer.h  RenderingProperties.h  Shape3D.h  Sphere.h  Vector2.h  Vector3.h  Vector4.h  bindings.cpp  test.cpp
src/lib/cshape3d/src/: test.cpp
src/lib/cshape3d/src/renderer/: Renderer.h  RenderingProperties.h
src/lib/cshape3d/src/shape/: Cilinder.h  Cube.h  Piramid.h  Shape3D.h
src/lib/cshape3d/src/test/: test.cpp
src/lib/cshape3d/src/vector/: Vector4.h
src/rendering/: cubeRendering.py  projectionMatrix.py  rendererProperties.py  shapeRenderer.py  shapeRendering.py  sphereRendering.py
src/shape/: cilinder.py  cube.py  piramid.py  shape.py  sphere.py
